--- a/index.ipynb
+++ b/index.ipynb
@@ -36,7 +36,7 @@
     "# Map housing\n",
     "\n",
     "gdf2 = geopandas.read_file(\n",
-    "  \"housingData/HousingDB_post2010.shp\",\n",
+    "  \"rawData/housingData/HousingDB_post2010.shp\",\n",
     "  rows=100 # TODO Update this value once filtering is working\n",
     ")\n",
     "\n",
@@ -50,7 +50,7 @@
     "# ------------------------\n",
     "# Part 3: Map flood risk areas in 2050\n",
     "\n",
-    "gdf3 = geopandas.read_file('floodMapData2050.gdb')\n",
+    "gdf3 = geopandas.read_file('rawData/floodMapData2050.gdb')\n",
     "gdf3.plot(ax=base, color='red')\n",
     "\n",
     "breakpoint()\n",
