--- a/index.ipynb
+++ b/index.ipynb
@@ -2,45 +2,79 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "import geopandas\n",
     "from geodatasets import get_path\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# ------------------------\n",
+    "import matplotlib.pyplot as plt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Part 1: Map the boroughs\n",
     "\n",
     "path_to_data = get_path(\"nybb\")\n",
     "gdf = geopandas.read_file(path_to_data)\n",
     "\n",
-    "gdf = gdf.set_index(\"BoroName\")\n",
-    "\n",
-    "base = gdf.plot(figsize=(15, 15), color='white', edgecolor='black', linewidth=1)\n",
-    "base.set_axis_off()\n",
-    "\n",
-    "# ------------------------\n",
+    "gdf = gdf.set_index(\"BoroName\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Part 2: Map housing\n",
     "\n",
     "gdf2 = geopandas.read_file(\n",
     "  \"rawData/housingData/HousingDB_post2010.shp\",\n",
     "  where=\"Job_Type='New Building'\"\n",
-    ")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Part 3: Map flood risk areas in 2050\n",
+    "\n",
+    "gdf3 = geopandas.read_file('rawData/floodMapData2050.gdb')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Part 4: Break flood risks out by type and map separately\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Final: Plot\n",
+    "\n",
+    "base = gdf.plot(figsize=(15, 15), color='white', edgecolor='black', linewidth=1)\n",
+    "base.set_axis_off()\n",
     "\n",
     "gdf2.plot(ax=base, markersize=0.5)\n",
     "\n",
-    "# ------------------------\n",
-    "# Part 3: Map flood risk areas in 2050\n",
-    "\n",
-    "gdf3 = geopandas.read_file('rawData/floodMapData2050.gdb')\n",
     "gdf3.plot(ax=base, color='red')\n",
     "\n",
-    "plt.savefig('images/newHousingMap', dpi=200)\n",
-    "\n",
-    "# ------------------------\n",
-    "# Part 4: Break flood risks out by type and map separately"
+    "plt.savefig('images/newHousingMap', dpi=200)"
    ]
   }
  ],
