Clean up code and add working notes with next step

--- a/index.ipynb
+++ b/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,41 +13,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Part 1: Map the boroughs\n",
+    "# Map NYC's boroughs\n",
     "\n",
     "path_to_data = get_path(\"nybb\")\n",
-    "gdf = geopandas.read_file(path_to_data)\n",
+    "nyc_base = geopandas.read_file(path_to_data)\n",
     "\n",
-    "gdf = gdf.set_index(\"BoroName\")"
+    "nyc_base = nyc_base.set_index(\"BoroName\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Part 2: Map housing\n",
+    "# Map housing\n",
     "\n",
-    "gdf2 = geopandas.read_file(\n",
+    "points = geopandas.read_file(\n",
     "  \"rawData/housingData/HousingDB_post2010.shp\",\n",
-    "  where=\"Job_Type='New Building'\"\n",
+    "  # Note: Only map new buildings in Brooklyn for now.\n",
+    "  where=\"Job_Type='New Building' AND Boro='3'\"\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Part 3: Map flood risk areas in 2050\n",
+    "# Map flood risk areas in 2050\n",
     "\n",
-    "gdf3 = geopandas.read_file('rawData/floodMapData2050.gdb')"
+    "gdf = geopandas.read_file('rawData/floodMapData2050.gdb')\n",
+    "# gdf = gdf.head(2) # Keep both categories of flooding, but remove sea level changes"
    ]
   },
   {
@@ -56,25 +58,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Part 4: Break flood risks out by type and map separately\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Final: Plot\n",
+    "# Plot\n",
     "\n",
-    "base = gdf.plot(figsize=(15, 15), color='white', edgecolor='black', linewidth=1)\n",
+    "base = nyc_base.plot(figsize=(15, 15), color='white', edgecolor='black', linewidth=1)\n",
     "base.set_axis_off()\n",
     "\n",
-    "gdf2.plot(ax=base, markersize=0.5)\n",
+    "points.plot(ax=base, markersize=0.5)\n",
     "\n",
-    "gdf3.plot(ax=base, color='red')\n",
+    "gdf.plot(ax=base, color='red')\n",
     "\n",
-    "plt.savefig('images/newHousingMap', dpi=200)"
+    "plt.savefig('images/newHousingMap', dpi=200)\n",
+    "\n",
+    "# Uncomment this to explore the map dynamically\n",
+    "# base = nyc_base.explore(figsize=(15, 15), color='white', edgecolor='black', linewidth=1, tooltip=False)\n",
+    "# points.explore(m=base, markersize=0.5, tooltip=False)\n",
+    "# gdf.explore(m=base, color='red', tooltip=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Begin exploring the overlap between flood zones and construction\n",
+    "\n",
+    "new_buildings_subject_to_flooding = []\n",
+    "\n",
+    "# Note: Reducing the data size for now for the sake of faster processing\n",
+    "for i in range(len(points.geometry.values) // 10):\n",
+    "  x = points.geometry.values[i]\n",
+    "  contains = gdf.contains(x)\n",
+    "  if any(contains.values):\n",
+    "    new_buildings_subject_to_flooding.append(x)\n",
+    "\n",
+    "print(new_buildings_subject_to_flooding)\n",
+    "\n",
+    "'''Working Notes\n",
+    "  Almost all of the flood zones on the map are within streets and do not overlap with the entirety of buildings\n",
+    "  The buildings as they are imported currently are simply points.\n",
+    "  It is likely necessary to expand these points into full building footprints in order to more accurately assess\n",
+    "    how those buildings are impacted by flooding. This is the next step.\n",
+    "'''"
    ]
   }
  ],
