Comment out WIP code

--- a/index.ipynb
+++ b/index.ipynb
@@ -203,14 +203,14 @@
    "source": [
     "# Plot\n",
     "\n",
-    "base = nyc_base.plot(figsize=(15, 15), color='white', edgecolor='black', linewidth=1)\n",
-    "base.set_axis_off()\n",
+    "# base = nyc_base.plot(figsize=(15, 15), color='white', edgecolor='black', linewidth=1)\n",
+    "# base.set_axis_off()\n",
     "\n",
     "# points.plot(ax=base, markersize=0.5)\n",
     "\n",
-    "gdf.plot(ax=base, color='red')\n",
+    "# gdf.plot(ax=base, color='red')\n",
     "\n",
-    "plt.savefig('images/newHousingMap', dpi=200)\n",
+    "# plt.savefig('images/newHousingMap', dpi=200)\n",
     "\n",
     "# Uncomment this to explore the map dynamically\n",
     "# base = nyc_base.explore(figsize=(15, 15), color='white', edgecolor='black', linewidth=1, tooltip=False)\n",
