Minor text updates

--- a/index.ipynb
+++ b/index.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "## Overview\n",
     "\n",
-    "Housing stock is always in short supply in NYC, and costs have risen considerably over time for both [owners](https://comptroller.nyc.gov/reports/spotlight-new-york-citys-homeowner-housing-market/) and [renters](https://comptroller.nyc.gov/reports/spotlight-new-york-citys-rental-housing-market/#:~:text=In%20the%20ACS%2C%20median%20gross,%2C%20a%20gain%20of%2012%25.). Although [new housing](https://github.com/lnagle/code-diary/tree/main/nyc-housing-analysis) is being built all the time, NYC is also subject to extreme weather and sea level rise due to climate change.\n",
+    "Housing stock is always in short supply in NYC, and costs have risen considerably over time for both [owners](https://comptroller.nyc.gov/reports/spotlight-new-york-citys-homeowner-housing-market/) and [renters](https://comptroller.nyc.gov/reports/spotlight-new-york-citys-rental-housing-market/). Although [new housing](https://github.com/lnagle/code-diary/tree/main/nyc-housing-analysis) is being built all the time, NYC is also subject to extreme weather and sea level rise due to climate change.\n",
     "\n",
-    "The goal of this project is to investigate how climate change will effect housing stock in NYC. We'll do this by using [NYC Open Data sets](https://opendata.cityofnewyork.us/).\n"
+    "The goal of this project is to investigate how climate change will affect housing stock in NYC. We'll do this by using [NYC Open Data sets](https://opendata.cityofnewyork.us/).\n"
    ]
   },
   {
@@ -17,7 +17,7 @@
    "source": [
     "## The Lay of the Land\n",
     "\n",
-    "First let’s get a simple visual of NYC’s boroughs"
+    "First, let’s get a simple visual of NYC’s boroughs."
    ]
   },
   {
@@ -56,14 +56,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note: At any point in this demo where we plot, we can also use the [`.explore()`](https://geopandas.org/en/stable/docs/user_guide/interactive_mapping.html#Interactive-mapping) function. This gives us an interactive map with the ability to zoom in and out, as well as view other metadata about sections of the map. Give it a try!"
+    "Note: At any point in this demo in which we `.plot()`, we can also use the [`.explore()`](https://geopandas.org/en/stable/docs/user_guide/interactive_mapping.html#Interactive-mapping) function. This gives us an interactive map with the ability to zoom in and out, as well as view other metadata about sections of the map. Give it a try!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let’s overlay this projected flooding and sea level rise in 2050. For this step, we'll be using [this data set](https://data.cityofnewyork.us/City-Government/NYC-Stormwater-Flood-Map-Moderate-Flood-with-2050-/5rzh-cyqd/about_data) provided by the NYC Department of Environmental Protection (DEP)."
+    "Now let’s overlay this with projected flooding and sea level rise in 2050. For this step, we'll be using [this data set](https://data.cityofnewyork.us/City-Government/NYC-Stormwater-Flood-Map-Moderate-Flood-with-2050-/5rzh-cyqd/about_data) provided by the NYC Department of Environmental Protection (DEP)."
    ]
   },
   {
