--- a/index.ipynb
+++ b/index.ipynb
@@ -130,8 +130,10 @@
     "base.set_axis_off()\n",
     "\n",
     "gdf = geopandas.read_file('rawData/floodMapData2050.gdb')\n",
-    "gdf1 = gdf.head(2) # Keep both categories of flooding, but remove sea level changes\n",
-    "gdf2 = gdf.tail(1) # Keep both categories of flooding, but remove sea level changes\n",
+    "\n",
+    "# Separate flooding categories from sea level change category \n",
+    "gdf1 = gdf.head(2)\n",
+    "gdf2 = gdf.tail(1)\n",
     "\n",
     "gdf1.plot(ax=base, color='red')\n",
     "gdf2.plot(ax=base, color='blue')\n",
@@ -150,14 +152,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# base = nyc_base.explore(figsize=(15, 15), color='white', edgecolor='black', linewidth=1, tooltip=False)\n",
     "\n",
-    "# gdf1 = gdf.head(2) # Keep both categories of flooding, but remove sea level changes\n",
-    "# gdf2 = gdf.tail(1) # Keep both categories of flooding, but remove sea level changes\n",
+    "# # Separate flooding categories from sea level change category \n",
+    "# gdf1 = gdf.head(2)\n",
+    "# gdf2 = gdf.tail(1)\n",
     "\n",
     "# gdf1.explore(m=base, color='red', tooltip=False)\n",
     "# gdf2.explore(m=base, color='blue', tooltip=False)"
@@ -171,6 +174,18 @@
     "\n",
     "1. We disable tooltips here. If we were to leave them on, we would see a full spread of column info whenever we hover over any of the areas that we plot. This can be super informative, but in the case of our two data sets it's a little noisy\n",
     "2. An implementation detail: In addition to changing `.plot()` to `.explore()`, we also need to update `ax=base` to `m=base` inside of any subsequent `.plot()` calls after the first. If we forget to, we'll receive an ambiguous JSON serialization error."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some category 1 and 2 observations from this mapping:\n",
+    "\n",
+    "- Flooding will be a widespread problem in NYC, affecting all 5 boroughs.\n",
+    "- Certain neighborhoods and areas will be more affected than others. For example, Red Hook and Gowanus are both subject to widespread flooding, while Park Slope to the east is not.\n",
+    "- While there's obvious risk associated with areas that are close to the water, the situation is not that simple. We can see widespread flooding in the interiors of Brooklyn and Queens, for example.\n",
+    "- We don't have enough information from this mapping alone to draw conclusions about which borough will be most affected by climate change."
    ]
   }
  ],
