Add anecdotal analysis of map

--- a/index.ipynb
+++ b/index.ipynb
@@ -187,6 +187,15 @@
     "- While there's obvious risk associated with areas that are close to the water, the situation is not that simple. We can see widespread flooding in the interiors of Brooklyn and Queens, for example.\n",
     "- We don't have enough information from this mapping alone to draw conclusions about which borough will be most affected by climate change."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One final note about this mapping: \n",
+    "\n",
+    "As mentioned above, we're only viewing areas of flooding that are considered \"deep and contiguous\" (4 inches of depth or greater). \"Deep and contiguous\" doesn’t mean that areas not highlighted on this map won't be affected. Anecdotally, I recall walking around my neighborhood, Fort Greene, after very heavy rains at the end of April 2023 and seeing many homeowners using water pumps to drain their basements and garden levels. Fort Greene, if you look closely, actually has very little flooding on our map. Which is to say that the data set we’re using may actually have quite a high bar for what flooding is. We need to keep this in mind throughout our analysis; extreme weather has impacts at a scale worthy of high-level, bird's eye view analysis, but at the end of the day it's causing signficant upheaval in the lives of individuals on the ground."
+   ]
   }
  ],
  "metadata": {
