Various small refinements to the text

--- a/index.ipynb
+++ b/index.ipynb
@@ -105,9 +105,9 @@
     "- 2. Deep and Contiguous Flooding (1 ft. and greater)\n",
     "- 3. Future High Tides in 2050\n",
     "\n",
-    "This first one contains a key caveat about this investigation: we will only be mapping areas that are identified to be _at a minimum_ under 4 inches of water.\n",
+    "This first one contains a key caveat about this investigation: we will only be mapping areas that are identified to be _at a minimum_ under 4 inches of water. We'll return to this caveat in a minute.\n",
     "\n",
-    "With this understanding, let's see what our map looks like if we plot sections 1 and 2 separately from 3."
+    "With this understanding, let's see what our map looks like if we distinguish categories 1 and 2 separately from 3 when plotting."
    ]
   },
   {
@@ -129,7 +129,7 @@
    "source": [
     "\n",
     "base = nyc_base.plot(figsize=(15, 15), color='white', edgecolor='black', linewidth=1)\n",
-    "base.set_title(\"NYC Flooding by Type in 2050\", fontsize=20)\n",
+    "base.set_title(\"NYC Flooding in 2050, Separated by Type\", fontsize=20)\n",
     "base.set_axis_off()\n",
     "\n",
     "gdf = geopandas.read_file('rawData/floodMapData2050.gdb')\n",
@@ -148,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As would be expect, we can see that sea level rise primarily effects the boundaries of each borough, with areas in Staten Island being an exception. It's a little hard from this view to really see the impact of the other two flood categories at a granular level. Let's try using the aforementioned `.explore()` function.\n",
+    "As we might expect, sea level rise primarily affects the boundaries of each borough, with areas in Staten Island being an exception. It's a little hard from this view to see the impact of the other two flood categories at a granular level. Let's try using the aforementioned `.explore()` function.\n",
     "\n",
     "The below code generates a pretty large map file (bigger than GitHub is willing to display), so I'm commenting it out. If you've pulled this repo down, simply uncomment the code and run it as normal"
    ]
@@ -175,8 +175,8 @@
    "source": [
     "That's definitely easier to see. A couple technical notes about the above code:\n",
     "\n",
-    "1. We disable tooltips here. If we were to leave them on, we would see a full spread of column info whenever we hover over any of the areas that we plot. This can be super informative, but in the case of our two data sets it's a little noisy\n",
-    "2. An implementation detail: In addition to changing `.plot()` to `.explore()`, we also need to update `ax=base` to `m=base` inside of any subsequent `.plot()` calls after the first. If we forget to, we'll receive an ambiguous JSON serialization error."
+    "1. We disable tooltips. If we were to leave them on, we would see a full spread of column info whenever we hover over any of the plotted areas. This can be super informative, but in the case of our two data sets it's a little noisy.\n",
+    "2. An implementation detail: In addition to changing `.plot()` to `.explore()`, we also need to update `ax=base` to `m=base` inside of subsequent `.plot()` calls after the first. If we forget this step, we'll receive an ambiguous JSON serialization error."
    ]
   },
   {
@@ -186,8 +186,8 @@
     "Some category 1 and 2 observations from this mapping:\n",
     "\n",
     "- Flooding will be a widespread problem in NYC, affecting all 5 boroughs.\n",
-    "- Certain neighborhoods and areas will be more affected than others. For example, Red Hook and Gowanus are both subject to widespread flooding, while Park Slope to the east is not.\n",
-    "- While there's obvious risk associated with areas that are close to the water, the situation is not that simple. We can see widespread flooding in the interiors of Brooklyn and Queens, for example.\n",
+    "- Certain neighborhoods will be more affected than others. For example, Red Hook and Gowanus are both subject to substantial flooding, while Park Slope to the east is not.\n",
+    "- While there's obvious risk associated with areas that are close to the water, the situation is not that simple. We can see widespread flooding in the interiors of Brooklyn and Queens too, for example.\n",
     "- We don't have enough information from this mapping alone to draw conclusions about which borough will be most affected by climate change."
    ]
   },
