Refine the final paragraph of part 1

--- a/index.ipynb
+++ b/index.ipynb
@@ -197,7 +197,7 @@
    "source": [
     "One final note about this mapping: \n",
     "\n",
-    "As mentioned above, we're only viewing areas of flooding with depths of 4 inches or greater. This doesn’t mean that areas not highlighted on this map won't be affected. Anecdotally, I recall walking around my neighborhood, Fort Greene, after very heavy rains at the end of April 2023 and seeing many homeowners using water pumps to drain their basements and garden levels. Fort Greene, if you look closely, actually has very little flooding on our map. Which is to say that the data set we’re using may actually have quite a high bar for what flooding is. We need to keep this in mind throughout our analysis; extreme weather has impacts at a scale worthy of high-level, bird's eye view analysis, but at the end of the day it's causing signficant upheaval in the lives of individuals on the ground."
+    "As mentioned above, we're only viewing areas of flooding with depths of 4 inches or greater, but this doesn’t mean that areas not highlighted on our map won't be affected. Anecdotally, I recall walking around my neighborhood, Fort Greene, after very heavy rains at the end of April 2023 and seeing many homeowners using water pumps to drain their basements and garden levels. Fort Greene, if you look closely, actually has very little flooding on our map. Which is to say that the data set we’re using may actually have quite a high bar for what flooding is. We need to keep this in mind throughout our analysis; extreme weather has impacts at a scale worthy of a high-level, bird's eye view, but if we step too far back or only look at the most extreme effects then we risk missing the significant upheaval in the lives of individuals on the ground."
    ]
   }
  ],
