Add housing overview

--- a/index.ipynb
+++ b/index.ipynb
@@ -199,6 +199,28 @@
     "\n",
     "As mentioned above, we're only viewing areas of flooding with depths of 4 inches or greater, but this doesn’t mean that areas not highlighted on our map won't be affected. Anecdotally, I recall walking around my neighborhood, Fort Greene, after very heavy rains at the end of April 2023 and seeing many homeowners using water pumps to drain their basements and garden levels. Fort Greene, if you look closely, actually has very little flooding on our map. Which is to say that the data set we’re using may actually have quite a high bar for what flooding is. We need to keep this in mind throughout our analysis; extreme weather has impacts at a scale worthy of a high-level, bird's eye view, but if we step too far back or only look at the most extreme effects then we risk missing the significant upheaval in the lives of individuals on the ground."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NYC Housing\n",
+    "\n",
+    "Note: This section is still a work in progress."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have our bearings, let’s add housing into the mix. We'll be using [this data set](https://data.cityofnewyork.us/Housing-Development/Building-Footprints/nqwf-w8eh), which has building footprints for every lot in the city. A few notes about this data (mostly draw from [here](https://github.com/CityOfNewYork/nyc-geo-metadata/blob/main/Metadata/Metadata_BuildingFootprints.md)):\n",
+    "\n",
+    "- It includes footprints for several types of structures. We can pare down this data by filtering on `FEAT_CODE=2100`. `2100` is the code for `buildings`. We may also want to include `5100`, which is `Buildings Under Construction`.\n",
+    "- We do not know from this data set alone whether or not a given building is residential. That said, we can cross reference a building's Building Identification Number (BIN) with another data set (likely [this one](https://www.nyc.gov/site/planning/data-maps/open-data/dwn-housing-database.page)) to determine whether or not it is residential.\n",
+    "- Updates to this data set are made weekly.\n",
+    "\n",
+    "As you may have guessed, this data set is huge (<Size> to be exact)"
+   ]
   }
  ],
  "metadata": {
