Refactor/update variable names for clarity

--- a/index.ipynb
+++ b/index.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -41,8 +41,8 @@
     "from geodatasets import get_path\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "path_to_data = get_path(\"nybb\")\n",
-    "nyc_base = geopandas.read_file(path_to_data)\n",
+    "path_to_boroughs = get_path(\"nybb\")\n",
+    "nyc_base = geopandas.read_file(path_to_boroughs)\n",
     "nyc_base = nyc_base.set_index(\"BoroName\")\n",
     "\n",
     "plot = nyc_base.plot(figsize=(15, 15), color='white', edgecolor='black', linewidth=1)\n",
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -86,9 +86,9 @@
     "base = nyc_base.plot(figsize=(15, 15), color='white', edgecolor='black', linewidth=1)\n",
     "base.set_axis_off()\n",
     "\n",
-    "gdf = geopandas.read_file('rawData/floodMapData2050.gdb')\n",
+    "flood_map_data = geopandas.read_file('rawData/floodMapData2050.gdb')\n",
     "\n",
-    "plot = gdf.plot(ax=base, color='red')\n",
+    "plot = flood_map_data.plot(ax=base, color='red')\n",
     "plot.set_title(\"NYC Flooding in 2050\", fontsize=20)\n",
     "\n",
     "plt.savefig('images/flooding2050', dpi=200)"
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -131,14 +131,13 @@
     "base.set_title(\"NYC Flooding in 2050, Separated by Type\", fontsize=20)\n",
     "base.set_axis_off()\n",
     "\n",
-    "gdf = geopandas.read_file('rawData/floodMapData2050.gdb')\n",
+    "flood_map_data = geopandas.read_file('rawData/floodMapData2050.gdb')\n",
     "\n",
-    "# Separate flooding categories from sea level change category \n",
-    "gdf1 = gdf.head(2)\n",
-    "gdf2 = gdf.tail(1)\n",
+    "flooding = flood_map_data.head(2)\n",
+    "sea_level_rise = flood_map_data.tail(1)\n",
     "\n",
-    "gdf1.plot(ax=base, color='red')\n",
-    "gdf2.plot(ax=base, color='blue')\n",
+    "flooding.plot(ax=base, color='red')\n",
+    "sea_level_rise.plot(ax=base, color='blue')\n",
     "\n",
     "plt.savefig('images/flooding2050SeparatedFloodTypes', dpi=200)"
    ]
@@ -154,18 +153,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# base = nyc_base.explore(figsize=(15, 15), color='white', edgecolor='black', linewidth=1, tooltip=False)\n",
+    "# base = nyc_base.explore(color='white', tooltip=False)\n",
     "\n",
-    "# # Separate flooding categories from sea level change category \n",
-    "# gdf1 = gdf.head(2)\n",
-    "# gdf2 = gdf.tail(1)\n",
-    "\n",
-    "# gdf1.explore(m=base, color='red', tooltip=False)\n",
-    "# gdf2.explore(m=base, color='blue', tooltip=False)"
+    "# flooding.explore(m=base, color='red', tooltip=False)\n",
+    "# sea_level_rise.explore(m=base, color='blue', tooltip=False)"
    ]
   },
   {
@@ -221,191 +216,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/lucasnagle/miniconda3/lib/python3.12/site-packages/geopandas/io/file.py:399: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_datetime without passing `errors` and catch exceptions explicitly instead\n",
-      "  as_dt = pd.to_datetime(df[k], errors=\"ignore\")\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>base_bbl</th>\n",
-       "      <th>shape_area</th>\n",
-       "      <th>heightroof</th>\n",
-       "      <th>mpluto_bbl</th>\n",
-       "      <th>cnstrct_yr</th>\n",
-       "      <th>globalid</th>\n",
-       "      <th>lststatype</th>\n",
-       "      <th>feat_code</th>\n",
-       "      <th>groundelev</th>\n",
-       "      <th>geomsource</th>\n",
-       "      <th>bin</th>\n",
-       "      <th>lstmoddate</th>\n",
-       "      <th>doitt_id</th>\n",
-       "      <th>shape_len</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>None</td>\n",
-       "      <td>3065220021</td>\n",
-       "      <td>None</td>\n",
-       "      <td>29.74985318</td>\n",
-       "      <td>3065220021</td>\n",
-       "      <td>1925</td>\n",
-       "      <td>{31298F86-3088-4F53-B3DB-71A9EFA6FA1F}</td>\n",
-       "      <td>Constructed</td>\n",
-       "      <td>2100</td>\n",
-       "      <td>40</td>\n",
-       "      <td>Photogramm</td>\n",
-       "      <td>3170958</td>\n",
-       "      <td>2017-08-22</td>\n",
-       "      <td>96807</td>\n",
-       "      <td>None</td>\n",
-       "      <td>POINT (-73.96673 40.62602)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>None</td>\n",
-       "      <td>5012640036</td>\n",
-       "      <td>None</td>\n",
-       "      <td>22.63</td>\n",
-       "      <td>5012640036</td>\n",
-       "      <td>1965</td>\n",
-       "      <td>{F5F8CDA5-69E2-46F8-8F69-BA95C025B520}</td>\n",
-       "      <td>Constructed</td>\n",
-       "      <td>2100</td>\n",
-       "      <td>39</td>\n",
-       "      <td>Photogramm</td>\n",
-       "      <td>5028452</td>\n",
-       "      <td>2017-08-22</td>\n",
-       "      <td>326368</td>\n",
-       "      <td>None</td>\n",
-       "      <td>POINT (-74.16795 40.63932)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>None</td>\n",
-       "      <td>5060190091</td>\n",
-       "      <td>None</td>\n",
-       "      <td>35.76</td>\n",
-       "      <td>5060190091</td>\n",
-       "      <td>1970</td>\n",
-       "      <td>{9F644794-F72C-4582-9E5E-B337E2B97068}</td>\n",
-       "      <td>Constructed</td>\n",
-       "      <td>2100</td>\n",
-       "      <td>51</td>\n",
-       "      <td>Photogramm</td>\n",
-       "      <td>5078368</td>\n",
-       "      <td>2017-08-22</td>\n",
-       "      <td>746627</td>\n",
-       "      <td>None</td>\n",
-       "      <td>POINT (-74.19518 40.55610)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>None</td>\n",
-       "      <td>3086910048</td>\n",
-       "      <td>None</td>\n",
-       "      <td>37.5</td>\n",
-       "      <td>3086910048</td>\n",
-       "      <td>1928</td>\n",
-       "      <td>{F916B22D-E25B-44AE-9FA9-2A51191B9CDF}</td>\n",
-       "      <td>Constructed</td>\n",
-       "      <td>2100</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Photogramm</td>\n",
-       "      <td>3245111</td>\n",
-       "      <td>2017-08-22</td>\n",
-       "      <td>786626</td>\n",
-       "      <td>None</td>\n",
-       "      <td>POINT (-73.96116 40.57742)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>None</td>\n",
-       "      <td>4075020005</td>\n",
-       "      <td>None</td>\n",
-       "      <td>18.01511294</td>\n",
-       "      <td>4075020005</td>\n",
-       "      <td>1950</td>\n",
-       "      <td>{525F2C24-616B-4F29-98A3-8FEA5D4B1A7D}</td>\n",
-       "      <td>Constructed</td>\n",
-       "      <td>2100</td>\n",
-       "      <td>93</td>\n",
-       "      <td>Photogramm</td>\n",
-       "      <td>4161096</td>\n",
-       "      <td>2017-08-22</td>\n",
-       "      <td>746409</td>\n",
-       "      <td>None</td>\n",
-       "      <td>POINT (-73.75429 40.75584)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   name    base_bbl shape_area   heightroof  mpluto_bbl cnstrct_yr  \\\n",
-       "0  None  3065220021       None  29.74985318  3065220021       1925   \n",
-       "1  None  5012640036       None        22.63  5012640036       1965   \n",
-       "2  None  5060190091       None        35.76  5060190091       1970   \n",
-       "3  None  3086910048       None         37.5  3086910048       1928   \n",
-       "4  None  4075020005       None  18.01511294  4075020005       1950   \n",
-       "\n",
-       "                                 globalid   lststatype feat_code groundelev  \\\n",
-       "0  {31298F86-3088-4F53-B3DB-71A9EFA6FA1F}  Constructed      2100         40   \n",
-       "1  {F5F8CDA5-69E2-46F8-8F69-BA95C025B520}  Constructed      2100         39   \n",
-       "2  {9F644794-F72C-4582-9E5E-B337E2B97068}  Constructed      2100         51   \n",
-       "3  {F916B22D-E25B-44AE-9FA9-2A51191B9CDF}  Constructed      2100          6   \n",
-       "4  {525F2C24-616B-4F29-98A3-8FEA5D4B1A7D}  Constructed      2100         93   \n",
-       "\n",
-       "   geomsource      bin lstmoddate doitt_id shape_len  \\\n",
-       "0  Photogramm  3170958 2017-08-22    96807      None   \n",
-       "1  Photogramm  5028452 2017-08-22   326368      None   \n",
-       "2  Photogramm  5078368 2017-08-22   746627      None   \n",
-       "3  Photogramm  3245111 2017-08-22   786626      None   \n",
-       "4  Photogramm  4161096 2017-08-22   746409      None   \n",
-       "\n",
-       "                     geometry  \n",
-       "0  POINT (-73.96673 40.62602)  \n",
-       "1  POINT (-74.16795 40.63932)  \n",
-       "2  POINT (-74.19518 40.55610)  \n",
-       "3  POINT (-73.96116 40.57742)  \n",
-       "4  POINT (-73.75429 40.75584)  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "building_footprints = geopandas.read_file('rawData/buildingFootprints.geojson')\n",
