Remove deprecation warning

--- a/index.ipynb
+++ b/index.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,17 +219,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/lucasnagle/miniconda3/lib/python3.12/site-packages/geopandas/io/file.py:399: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_datetime without passing `errors` and catch exceptions explicitly instead\n",
-      "  as_dt = pd.to_datetime(df[k], errors=\"ignore\")\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -399,15 +391,21 @@
        "4  POINT (-73.75429 40.75584)  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import warnings\n",
+    "\n",
     "try:\n",
-    "  # Load from file if present. The file is included in .gitignore due to its size.\n",
-    "  building_footprints = geopandas.read_file('rawData/buildingFootprints.geojson')\n",
+    "  # Suppress noisy deprecation warning internal to geopandas.\n",
+    "  with warnings.catch_warnings():\n",
+    "    warnings.simplefilter(action='ignore', category=FutureWarning)\n",
+    "\n",
+    "    # Load from file if present. The file is included in .gitignore due to its size.\n",
+    "    building_footprints = geopandas.read_file('rawData/buildingFootprints.geojson')\n",
     "except:\n",
     "  print('local file not found. Reading from data source url.')\n",
     "  url = 'https://data.cityofnewyork.us/api/geospatial/qb5r-6dgf?method=export&format=GeoJSON'\n",
