--- a/index.ipynb
+++ b/index.ipynb
@@ -207,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have our bearings, let’s add housing into the mix. We'll be using [this data set](https://data.cityofnewyork.us/Housing-Development/Building-Footprints/nqwf-w8eh), which has building footprints for every lot in the city. A few notes about this data (mostly draw from [here](https://github.com/CityOfNewYork/nyc-geo-metadata/blob/main/Metadata/Metadata_BuildingFootprints.md)):\n",
+    "Now that we have our bearings, let’s add housing into the mix. We'll be using [this data set](https://data.cityofnewyork.us/Housing-Development/Building-Footprints/nqwf-w8eh), which has building footprints for every lot in the city. A few notes about this data (mostly drawn from [here](https://github.com/CityOfNewYork/nyc-geo-metadata/blob/main/Metadata/Metadata_BuildingFootprints.md)):\n",
     "\n",
     "- It includes footprints for several types of structures. We can pare down this data by filtering on `FEAT_CODE=2100` (`2100` is the code for `buildings`). Fortunately, we can rely on NYC Open Data to handle this filtering for us when we export the data.\n",
     "  - We may also want to include `5100`, which is `Buildings Under Construction`, but we'll set this aside for now. \n",
